# Gmail-Automation-Tool

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  ecosystem.config.js  manage_services.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.sh  run_server.sh  test_startup.sh
backend/: __init__.py  main.py
backend/api/: __init__.py  dependencies.py  schemas.py  websocket.py
backend/api/routes/: __init__.py  accounts.py  proxies.py
backend/core/: __init__.py  account_creator.py  account_creator_temp.py  anti_detection.py  captcha_handler.py  password_manager.py  proxy_manager.py  verification_handler.py
backend/database/: __init__.py  connection.py  models.py  repositories.py
backend/utils/: config.py  logging.py
dashboard/: Dockerfile  README.md  docker-compose.yml  jest.config.js  jest.setup.js  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/.next/: trace
dashboard/.next/server/: server-reference-manifest.js  server-reference-manifest.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/accounts/: page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/config/: page.tsx
dashboard/src/app/create/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/__tests__/: accounts-table.test.tsx  button.test.tsx
dashboard/src/components/accounts/: accounts-filters.tsx  accounts-table.tsx  bulk-actions.tsx
dashboard/src/components/analytics/: analytics-charts.tsx  metrics-grid.tsx  performance-table.tsx
dashboard/src/hooks/: use-api.ts  use-auth.ts
dashboard/src/repositories/: base-repository.ts  gmail-account-repository.ts
dashboard/src/services/: auth.ts  cache.ts  http-client.ts  logger.ts  notification.ts  websocket.ts
dashboard/src/types/: core.ts  domain.ts
dashboard/src/use-cases/: account-management.ts
docs/: API.md  STARTUP_GUIDE.md  USER_MANUAL.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/contexts/: WebSocketContext.tsx
migrations/: env.py
scripts/: setup.sh  verify_deployment.py
src/: __init__.py  main.py
src/api/: dependencies.py  schemas.py  websocket.py
src/api/routes/: accounts.py  proxies.py
src/core/: __init__.py  account_creator.py  anti_detection.py  captcha_handler.py  password_manager.py  proxy_manager.py  verification_handler.py
src/database/: connection.py  models.py  repositories.py
src/utils/: config.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: conftest.py  test_password_manager.py  test_repositories.py
(+12 files in other folders)
